--- a/app_add.html
+++ b/app_add.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html ng-app="myApp">
 <head><script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>
-
+<link rel="stylesheet" type="text/css" href="css/style.css">
+<script src="js/controller.js"></script>
 <style>
 
 </style>
@@ -46,7 +47,7 @@
 
 
   <script>
-  
+
         </script>
         </body>
         </html>
